--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "lowdb": "^1.0.0",
     "pug": "^2.0.3",
     "shortid": "^2.2.14"
